# Spatial-Lakehouse-MCP

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  validate_stack.py
src/spatial_lakehouse_mcp/: __init__.py  config.py  engine.py  server.py  validators.py
tests/: conftest.py  test_mcp_tools.py  test_tools.py
