[project]
name = "spatial-lakehouse-mcp"
version = "0.1.0"
description = "Iceberg-native geospatial MCP server powered by DuckDB"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.0",
    "duckdb>=1.4.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
